# MAVPlayer

./: .gitignore  CMakeLists.txt  video.sdp
base/: CMakeLists.txt  log.h  log_callback.h  unused.h
cmake/: color_message.cmake
ffmpeg_decoder/: CMakeLists.txt  ffmpeg_common.cpp  ffmpeg_common.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_decoder_enumerate.cpp  ffmpeg_decoder_enumerator.h
ffmpeg_demuxer/: CMakeLists.txt  ffmpeg_common.cpp  ffmpeg_common.h  ffmpeg_demuxer.cpp  ffmpeg_demuxer.h
media_base/: CMakeLists.txt  compressed_frame.cpp  compressed_frame.h  media_decoder.h  media_definition.h  media_demuxer.h  movie_info.cpp  movie_info.h  raw_video_frame.cpp  raw_video_frame.h  stream_info.cpp  stream_info.h
player/: CMakeLists.txt  main.cpp  media_importer.cpp  media_importer.h
